--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -2,7 +2,7 @@
 {% get_current_language as LANGUAGE_CODE %}{% get_current_language_bidi as LANGUAGE_BIDI %}
 <html lang="{{ LANGUAGE_CODE|default:"en-us" }}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %} >
 <head>
-<title>{% block title %}{% endblock %}</title>
+<title>{% block title %}GetBeta{% endblock %}</title>
 
 {% block defaultstyle %}
     <meta charset="utf-8">
