--- a/templates/registration/confirm.html
+++ b/templates/registration/confirm.html
@@ -2,7 +2,6 @@
 {% load staticfiles %}
 {% block content %}
 <div style="margin-top:100px; padding: 30px">
-    Thank you for registering.
-    <a href="/">Login</a> 
+    Please confirm your email address to complete the registration.
 </div>   
 {% endblock %}
