--- a/templates/gencoui/rndr_repository.html
+++ b/templates/gencoui/rndr_repository.html
@@ -149,10 +149,10 @@
 					<!-- <img src="{% static 'gencoui/img/rndr/entity.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px"> -->
 					 
 		    		{% verbatim %}
-		    		<h3>{{GencoEntidad.nombre}} </h3>
-		    		<p>{{repo_selected.text}} Repository</p>
+		    		<h3>{{GencoEntidad.nombre}} </h3>		    		
 				</div>	
 		    		<p>{{GencoEntidad.descripcion}}</p>
+		    		<div id="RepoDesc"></div>
 		    		{% endverbatim %}
 
 		    		<!-- {{form_entitie_definition}} -->
