--- a/static/gencoui/css/rndr-style.css
+++ b/static/gencoui/css/rndr-style.css
@@ -164,7 +164,7 @@
 
 		.navbar {
 			margin-bottom: 0px;
-			box-shadow: 0px 5px 10px #eee;
+			box-shadow: 0px 5px 10px #848080;;
 		}
 
 		.navbar-brand {
@@ -172,6 +172,11 @@
 		    padding: 10px 15px;
 		}
 
+		.navbar-default {
+		    background-color: #476f98;
+		    border-color: transparent;
+		    
+		}
 		.arrow-up {
 			position: relative;
     		left: 15px;
