--- a/templates/gencoui/menu.html
+++ b/templates/gencoui/menu.html
@@ -48,7 +48,7 @@
 
 {% block content %}
 
-<div  id="ctrl_entities" style="width: 98%">
+<div style="width: 98%">
 
   <div class"container-fluid">
     
@@ -83,11 +83,15 @@
               </div>
               <!-- <div class="col-md-1"></div> -->
               <div class="col-xs-12">
-                <!-- <div class="panel panel-default" style="border-width:1px; border-color:rgb(251,221,127); box-shadow:0px 10px 19px 0px #b4bcc2;">
-                    <div class="panel-header">                      
+                <div class="panel panel-default" style="border-width:1px; border-color:rgb(251,221,127); box-shadow:0px 10px 19px 0px #b4bcc2;">
+                    <div class="panel-header">                 
                     </div>
-                  <div class="panel-body">{ include "gencoui/rndr_builds_search.html" }</div>
-                </div> -->
+                  <div class="panel-body">
+                    <h2 style="color: #202077;display:inline"></h2> 
+                    <a class="btn btn-default btn-xs" role="button" data-toggle="modal" data-target="#build-clone-modal" data-placement="bottom" data-tt="tooltip" title="Search Lang" style="margin-bottom:20px"><i class="glyphicon glyphicon-search"></i>Search</a>
+                  </div>
+                  <div class="panel-footer" style="font-size:12px; background-color:#ffffff">Search for projects that can be cloned and used as a basis.</div>
+                </div>
               </div>
 
             </div>        
@@ -134,5 +138,15 @@
 
     
   </div>  
+
+
+    <!-- Modal build search -->
+    <div class="modal fade" id="build-clone-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog">
+        {% include "gencoui/rndr_builds_search.html" %}
+      </div>
+    </div>
+
+
 </div>
 {% endblock %}
