--- a/templates/gencoui/menu.html
+++ b/templates/gencoui/menu.html
@@ -106,10 +106,10 @@
             <div class="col-md-1"></div>
             <div class="col-md-10">
               <div class="panel panel-default" style="border-width:0px; box-shadow:0px 10px 19px 0px #b4bcc2; ">
-                <div class="panel-body" style=" text-align:center; border-bottom:1px solid #e3e3e3; background-color:rgb(85, 158, 205); border-top-right-radius: 5px; border-top-left-radius: 5px; padding:5px">
+                <div class="panel-body" style=" text-align:center; border-bottom:1px solid #e3e3e3; border-top-right-radius: 5px; border-top-left-radius: 5px; padding:5px">
                   <img src="{% static 'gencoui/img/rndr/environment.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="64px" height="64px"></img>
-                  <h2 style="color: #fff; margin-top: 10px;">Environments</h2>
-                  <p style="font-size:14px; color:#fff; margin-bottom: 5px;">Define a stack for languages</p>
+                  <h2 style="color: #202077; margin-top: 10px;">Environments</h2>
+                  <p style="font-size:14px; color:#202077; margin-bottom: 5px;">Define a stack for languages</p>
                 </div>
                 <div class="">{% include "gencoui/rndr_env.html" %}
                 </div>
