--- a/templates/gencoui/rndr_builds.html
+++ b/templates/gencoui/rndr_builds.html
@@ -113,6 +113,7 @@
 <div id="ctrl_builds" ng-app="app_builds" data-ng-init="init()" ng-controller="ctrl_builds">
 	<input hidden id="key_module" value="{{entorno.id_entorno}}"/>
 	<input hidden id="key_project" value="{{proyecto.id_proyecto}}"/>
+	<input hidden id="name_project" value="{{proyecto.nombre}}"/>
 	
 	    <div id="sidebar" >
 	    	<span id="position"></span>
