--- a/templates/registration/confirm.html
+++ b/templates/registration/confirm.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 {% block content %}
 <div style="margin-top:100px; padding: 30px">
-    Please confirm your email address to complete the registration.
+	<h3>Confirm email</h3>
+    <p>Please confirm your email address to complete the registration.</p>
 </div>   
 {% endblock %}
