--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -5,6 +5,7 @@
 {% endblock %}
 {% block content %}
 <div style="margin-top:100px; padding: 30px">
+	<h3>Check your email</h3>
 	<p>We've e-mailed you instructions for setting your password to the e-mail address you submitted.</p>
 	<p>You should be receiving it shortly.</p>
 </div>
