:| validaciones de editor

--- a/templates/gencoui/rndr_editor.html
+++ b/templates/gencoui/rndr_editor.html
@@ -513,9 +513,9 @@
 
 		  		<form ng-submit="serachRepos()">
 					 	<div class="input-group">
-						    <input id="findRepoKey" type="text" class="form-control" placeholder="Find Repository">
+						    <input id="findComponentKey" type="text" class="form-control" placeholder="Find Component">
 						    <span class="input-group-btn">
-						      <button class="btn btn-default btn-sm" type="button" ng-click="searchRepos(1)">
+						      <button class="btn btn-default btn-sm" type="button" ng-click="searchComponent(1)">
 						      	<i class="glyphicon glyphicon-search"></i>
 						      	Search
 						      </button>
