--- a/templates/gencoui/rndr_langs.html
+++ b/templates/gencoui/rndr_langs.html
@@ -135,76 +135,82 @@
 			    		<div class="container-fluid">
 			    			{% verbatim %}
 					      	<div class="panel-body" ng-if="language_selected.nombre!=null">
-					      		
-												<h3>{{ language_selected.nombre }}</h3>
-												<a class="btn btn-default btn-xs" role="button" data-toggle="modal" data-placement="bottom" data-tt="tooltip" title="Add Type" ng-click="new_type(lang.id_lenguaje)">
+					      						
+					      						<div style="display:inline">
+													<h3>{{ language_selected.nombre }}
+													<sub style="font-size:12px;color:#CCCCCC">{{ language_selected.cloneData }}</sub>
+													</h3>
+												</div>
+			
+												<div style="border: 1px solid #e3e3e3;border-radius: 4px;padding: 10px; margin-top: 20px;  background-color:rgba(236, 240, 241, 0.39);">
+													<table class="table-bordered render-table" style="margin-top: 20px; width:90%">
+													  	
+													  		
+													  		<thead>
+													  			<th style="min-width: 250px;"><span>Genco</span>
+													  			</th>
+													  			<th style="min-width: 300px; background-color: #ffffff">
+													  				<span>{{language_selected.nombre}}</span>
+													  																<a class="btn btn-default btn-xs" role="button" data-toggle="modal" data-placement="bottom" data-tt="tooltip" title="Add Type" ng-click="new_type(lang.id_lenguaje)">
 													<!-- <span class="glyphicon btn-glyphicon glyphicon-plus" ></span> -->
 													+ Datatype			
-												</a>			
-												<table class="table-bordered render-table" style="margin-top: 20px; width:90%">
-												  	
-												  		
-												  		<thead>
-												  			<th style="min-width: 250px; background-color: #ffffff"><span>Genco</span>
-												  			</th>
-												  			<th style="background-color: #ECF0F1; min-width: 300px;">
-												  				<span>{{language_selected.nombre}}</span>
-								   							    <!-- <select id="repeatSelect" ng-model="data.repeatSelect" ng-change="getTypesCombos(lang.id_lenguaje)">
-															      	<option ng-repeat="option in data.availableOptions" value="{{option.id_lenguaje}}">{{ option.nombre }}</option>
-															    </select> -->
-															     <!-- <tt>repeatSelect = {{data.repeatSelect}}</tt><br/> -->
-															    <div style="display:inline; float:right">
-																    <a class="btn icon-btn btn-default" ng-click="save_conversion(lang.id_lenguaje)" data-placement="bottom"data-tt="tooltip" title="Save">
-																		<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
-																	</a>
-																	<!-- <a class="btn icon-btn btn-default"  ng-click="print()" data-placement="bottom"data-tt="tooltip" title="Undo">
-																		<span class="glyphicon btn-glyphicon glyphicon-refresh img-circle" ></span>					
-																	</a> -->
-															    </div> 
-
-												  			</th>
-												  			
-												  		</thead>
-												  		<tbody >	
-												  			<!-- item in <code>{{ types | json }}</code> -->
-															<tr  ng-repeat="type in types">
-													      		<td>{{ type.nombre}}<sub style="color:#cccccc">{{type.descripcion}}</sub></td>						      		
-<!-- 													      		<td width="100px" >
-
-													      			<div>
-																		<a class="btn btn-sm" data-toggle="modal" data-target="#type-edit-modal" data-placement="bottom" data-tt="tooltip" title="Edit Type" ng-click="edit_type($index)" style="padding: 6px 2px;">
-																			<span class="glyphicon btn-glyphicon glyphicon-pencil" ></span>					
+												</a>
+									   							    <!-- <select id="repeatSelect" ng-model="data.repeatSelect" ng-change="getTypesCombos(lang.id_lenguaje)">
+																      	<option ng-repeat="option in data.availableOptions" value="{{option.id_lenguaje}}">{{ option.nombre }}</option>
+																    </select> -->
+																     <!-- <tt>repeatSelect = {{data.repeatSelect}}</tt><br/> -->
+																    <div style="display:inline; float:right">
+																	    <a class="btn icon-btn btn-default" ng-click="save_conversion(lang.id_lenguaje)" data-placement="bottom"data-tt="tooltip" title="Save">
+																			<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
 																		</a>
-																		<a class="btn btn-sm" data-toggle="modal" data-target="#type-remove-modal" data-placement="bottom" data-tt="tooltip" title="Remove Type" ng-click="remove()" style="padding: 6px 2px;">
-																			<span class="glyphicon btn-glyphicon glyphicon-minus" ></span>					
+																		<!-- <a class="btn icon-btn btn-default"  ng-click="print()" data-placement="bottom"data-tt="tooltip" title="Undo">
+																			<span class="glyphicon btn-glyphicon glyphicon-refresh img-circle" ></span>					
+																		</a> -->
+																    </div> 
+
+													  			</th>
+													  			
+													  		</thead>
+													  		<tbody >	
+													  			<!-- item in <code>{{ types | json }}</code> -->
+																<tr  ng-repeat="type in types">
+														      		<td >{{ type.nombre}}<sub style="color:#cccccc">{{type.descripcion}}</sub></td>						      		
+	<!-- 													      		<td width="100px" >
+
+														      			<div>
+																			<a class="btn btn-sm" data-toggle="modal" data-target="#type-edit-modal" data-placement="bottom" data-tt="tooltip" title="Edit Type" ng-click="edit_type($index)" style="padding: 6px 2px;">
+																				<span class="glyphicon btn-glyphicon glyphicon-pencil" ></span>					
+																			</a>
+																			<a class="btn btn-sm" data-toggle="modal" data-target="#type-remove-modal" data-placement="bottom" data-tt="tooltip" title="Remove Type" ng-click="remove()" style="padding: 6px 2px;">
+																				<span class="glyphicon btn-glyphicon glyphicon-minus" ></span>					
+																			</a>
+														      			</div>
+														      			
+																	</td> -->
+														      		<td style="background-color: #ffffff">
+														      			<select  ng-model="Conversions[$index]" ng-change="" ng-options="types_cnv.id_tipodato as types_cnv.nombre for types_cnv in types_types">
+														      			<!-- <select  ng-model="Conversions[$index]" ng-change="" ng-options="type_cnv.nombre for type_cnv in types_types track by type_cnv.id_tipodato ">  -->
+														      				<option value=''>Select</option>
+																      		<!-- <option ng-options=="types_cnv in types_types" value="{{types_cnv.id_tipodato}}">{{ types_cnv.nombre }}</option> -->
+																    	</select>	
+																    	<!-- {{Conversions[$index]}} -->
+																    	<!-- <tt>repeatSelect = {{type.id_tipodato}}</tt><br/> -->
+														      		</td>
+														      		<!-- <td width="15px">
+																		<a class="btn icon-btn btn-default" href="#">
+																		<span class="glyphicon btn-glyphicon glyphicon-minus img-circle" ></span>
 																		</a>
-													      			</div>
-													      			
-																</td> -->
-													      		<td>
-													      			<select  ng-model="Conversions[$index]" ng-change="" ng-options="types_cnv.id_tipodato as types_cnv.nombre for types_cnv in types_types">
-													      			<!-- <select  ng-model="Conversions[$index]" ng-change="" ng-options="type_cnv.nombre for type_cnv in types_types track by type_cnv.id_tipodato ">  -->
-													      				<option value=''>Select</option>
-															      		<!-- <option ng-options=="types_cnv in types_types" value="{{types_cnv.id_tipodato}}">{{ types_cnv.nombre }}</option> -->
-															    	</select>	
-															    	<!-- {{Conversions[$index]}} -->
-															    	<!-- <tt>repeatSelect = {{type.id_tipodato}}</tt><br/> -->
-													      		</td>
-													      		<!-- <td width="15px">
-																	<a class="btn icon-btn btn-default" href="#">
-																	<span class="glyphicon btn-glyphicon glyphicon-minus img-circle" ></span>
-																	</a>
-													      		</td> -->
-													      	</tr>
-												      	{% endverbatim %}	
+														      		</td> -->
+														      	</tr>
+													      	{% endverbatim %}	
 
-												      	<!-- <tfoot> -->
-											          		
-											  	  		<!-- </tfoot> -->
-											  	  	</tbody>
+													      	<!-- <tfoot> -->
+												          		
+												  	  		<!-- </tfoot> -->
+												  	  	</tbody>
 
-												</table>
-
+													</table>
+												</div>		
 									      </div>
 							</div>
 			    		
@@ -299,14 +305,31 @@
 		    </div>
           <!-- <div class="arrow-up"></div> -->
           	<div class="modal-body">
-          		<form ng-submit="saveOrUpdateEntity()">
-          			{{ form_add_lang }}	
+          		<form ng-submit="saveOrUpdate()">
+          			{{ form_add_lang }}
+
+          			<div style="text-align:center">
+						<img id="imgLangIconAdd" src="/static/gencoui/img/rndr/noimage.jpg" width="64px" height="64px" style="margin: 8px"/>
+          			</div>
+      				
+					<div>
+				
+						{% verbatim %}
+						<div class="modal-footer">							
+							<div class="checkbox" ng-repeat="icon in langIconos" style="display:inline;margin: 8px">
+
+								<img class="rndr-scale" ng-src="{{icon.upload}}" width="32px" height="32px" ng-click="setLangIcon(icon)"/>
+								
+							</div>
+						</div>	
+						{% endverbatim %}	
+					</div>
           			<button type="submit" hidden></button>
           		</form>				
           	</div>
           	<div class="modal-footer">
           		<div style="display:inline">
-	          		<a class="btn icon-btn btn-default" ng-click="saveOrUpdateEntity()" data-placement="bottom"data-tt="tooltip" title="Save">
+	          		<a class="btn icon-btn btn-default" ng-click="saveOrUpdate()" data-placement="bottom"data-tt="tooltip" title="Save">
 						<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
 					</a>
 				</div>	
