--- a/templates/gencoui/menu.html
+++ b/templates/gencoui/menu.html
@@ -23,6 +23,10 @@
 {% block extrajs %}
   <script src="{% static 'gencoui/js/angular.min.js' %}"></script>
   <script src="{% static 'gencoui/js/angular-resource.min.js' %}"></script>
+
+    <script src="{% static 'gencoui/js/rndr_module/app_env.js' %}"></script>
+  <script src="{% static 'gencoui/js/rndr_module/service_env.js' %}"></script>
+  <script src="{% static 'gencoui/js/rndr_module/service_lang.js' %}"></script>
   
   <script type="text/javascript">
     $(function () {
@@ -48,32 +52,32 @@
 
 {% block content %}
 
-<div style="width: 98%">
+<div style="width: 98%"  ng-app="app_env" >
 
   <div class"container-fluid">
     
       <div class="row">    
       <div class="col-md-1">
       </div>  
-      <div class="col-md-3">
+      <div class="col-md-5">
           <div class"container-fluid">
-            <div class="row" style="margin-top:100px">
+            <div class="row" style="margin-top:85px">
               <!-- <div class="col-xs-1"></div> -->
-              <div class="col-xs-12">
-                <div class="panel panel-default" style="border-width:5px; border-color:#bad8eb; box-shadow: 0px 10px 19px 0px #b4bcc2; margin-bottom:50px">
-                    <div class="panel-body" style="background-color: #bad8eb; ">
-                      <h2 style="color: #202077;display:inline" >{% trans 'Langs' %}</h2> 
+              <div class="col-xs-6">
+                <div class="panel panel-default" style="border-width:5px; border-color:#ffffff; box-shadow: 0px 10px 19px 0px #b4bcc2; margin-bottom:50px">
+                    <div class="panel-body" style="background-color: #ffffff; ">
+                      <h3 style="color: #202077;display:inline" >{% trans 'Langs' %}</h3> 
                         <a href="{% url 'gencoui:module' 'langs' %}" style="display:inline; float:right">
                           <img class="rndr-scale" src="{% static 'gencoui/img/rndr/langs.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="48px" height="48px"></img>
                         </a>
                     </div>
-                    <div class="panel-footer" style="font-size:12px; background-color:#ffffff">You can define your knowed languages</div>
+                    <div class="panel-footer" style="font-size:12px; background-color:#ffffff">Define your knowed languages</div>
                 </div>
               </div>
-              <div class="col-xs-12">      
-                <div class="panel panel-default" style="border-width:5px; border-color:rgb(251,221,127);  box-shadow:0px 10px 19px 0px #b4bcc2; margin-bottom:50px">        
-                    <div class="panel-body" style="background-color:rgb(251,221,127)">                  
-                        <h2 style="color: #202077;display:inline" >Metadata</h2> 
+              <div class="col-xs-6">      
+                <div class="panel panel-default" style="border-width:5px; border-color:#ffffff;  box-shadow:0px 10px 19px 0px #b4bcc2; margin-bottom:50px">        
+                    <div class="panel-body" style="background-color:#ffffff">                  
+                        <h3 style="color: #202077;display:inline" >Metadata</h3> 
                         <a href="{% url 'gencoui:module' 'entities' %}" style="display:inline; float:right">
                           <img class="rndr-scale" src="{% static 'gencoui/img/rndr/repository.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="48px" height="48px"></img>
                         </a>          
@@ -83,15 +87,27 @@
               </div>
               <!-- <div class="col-md-1"></div> -->
               <div class="col-xs-12">
-                <div class="panel panel-default" style="border-width:1px; border-color:rgb(251,221,127); box-shadow:0px 10px 19px 0px #b4bcc2;">
-                    <div class="panel-header">                 
+                  <div class="panel panel-default" style="border-width:0px; box-shadow:0px 10px 19px 0px #b4bcc2; ">
+
+                    <div class="panel-body" style=" text-align:center; border-bottom:1px solid #e3e3e3; border-top-right-radius: 5px; border-top-left-radius: 5px; padding:5px">
+                    
+                      
+                      <h3 style="color: #202077; margin-top: 10px;display:inline">Projects</h3>
+                      <img src="{% static 'gencoui/img/rndr/environment.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="48px" height="48px" style="display:inline; margin:10px"></img>
+
+                      <p style="font-size:12px; color:#202077; margin-bottom: 5px;"></p>
+
                     </div>
-                  <div class="panel-body">
-                    <h2 style="color: #202077;display:inline"></h2> 
-                    <a class="btn btn-default btn-xs" role="button" data-toggle="modal" data-target="#build-clone-modal" data-placement="bottom" data-tt="tooltip" title="Search Lang" style="margin-bottom:20px"><i class="glyphicon glyphicon-search"></i>Search</a>
-                  </div>
-                  <div class="panel-footer" style="font-size:12px; background-color:#ffffff">Search for projects that can be cloned and used as a basis.</div>
-                </div>
+
+
+                    <div class="panel-body" style=" text-align:center; border-bottom:1px solid #e3e3e3; border-top-right-radius: 5px; border-top-left-radius: 5px; padding:5px">
+                      {% include "gencoui/rndr_builds_search.html" %}
+                    </div>  
+                  </div>    
+
+
+
+
               </div>
 
             </div>        
@@ -99,35 +115,52 @@
       </div>                
       <!-- </div>
       <div class="row"> -->
-      <div class="col-md-8">
-          <div class"container-fluid">
+      <div class="col-md-6">
+          <div class"container-fluid" >
 
-          <div class="row" style="margin-top:100px">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
-              <div class="panel panel-default" style="border-width:0px; box-shadow:0px 10px 19px 0px #b4bcc2; ">
-                <div class="panel-body" style=" text-align:center; border-bottom:1px solid #e3e3e3; border-top-right-radius: 5px; border-top-left-radius: 5px; padding:5px">
-                  <img src="{% static 'gencoui/img/rndr/environment.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="64px" height="64px"></img>
-                  <h2 style="color: #202077; margin-top: 10px;">Environments</h2>
-                  <p style="font-size:14px; color:#202077; margin-bottom: 5px;">Define a stack for languages</p>
-                </div>
-                <div class="">{% include "gencoui/rndr_env.html" %}
-                </div>
-              </div>
-            </div>
-          <!--   <div class="col-md-3">
-               <div class="panel panel-default" style="border: none ">
-                  <div class="panel-body" style="background-color: rgb(159,222,203); ">
-                    <h2 style="color: #202077;">Langs</h2>
-                    Panel content
+            <div class="row" style="margin-top:85px">
+              <!-- <div class="col-md-1"></div> -->
+              <div class="col-md-11">
+
+
+                <div class="panel panel-default" style="border-width:0px; box-shadow:0px 10px 19px 0px #b4bcc2; ">
+                  <div class="panel-body" style="text-align:center; border-bottom:1px solid #e3e3e3; border-top-right-radius: 5px; border-top-left-radius: 5px; ">
+                    
+                   
+                      <h3 style="color: #202077; margin-top: 10px;display:inline;">Environments</h3>
+                      <img src="{% static 'gencoui/img/rndr/environment.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="48px" height="48px" style="display:inline;  margin:10px"></img>
+                 
+                    
+
+                    <!-- <p style="font-size:12px; color:#202077; margin-bottom: 5px;">Define a stack for languages</p> -->
+
                   </div>
-                  <div class="panel-footer" style="background-color: white">Panel footer</div>
+                  <div class="">{% include "gencoui/rndr_env.html" %}
+                  </div>
+                </div>
+
+
+
               </div>
-            </div> -->
-            <div class="col-md-1"></div>
-          </div>      
-        </div>
-        </div>
+            <!--   <div class="col-md-3">
+                 <div class="panel panel-default" style="border: none ">
+                    <div class="panel-body" style="background-color: rgb(159,222,203); ">
+                      <h2 style="color: #202077;">Langs</h2>
+                      Panel content
+                    </div>
+                    <div class="panel-footer" style="background-color: white">Panel footer</div>
+                </div>
+              </div> -->
+              <div class="col-md-1"></div>
+            </div> 
+
+
+
+
+
+          </div>
+
+      </div>
       
           
 
@@ -140,12 +173,6 @@
   </div>  
 
 
-    <!-- Modal build search -->
-    <div class="modal fade" id="build-clone-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog">
-        {% include "gencoui/rndr_builds_search.html" %}
-      </div>
-    </div>
 
 
 </div>
