--- a/templates/gencoui/rndr_env.html
+++ b/templates/gencoui/rndr_env.html
@@ -1,9 +1,7 @@
 {% load staticfiles %}
 {% load static %}
 {% block extrajs %}
-	<script src="{% static 'gencoui/js/rndr_module/app_env.js' %}"></script>
-	<script src="{% static 'gencoui/js/rndr_module/service_env.js' %}"></script>
-	<script src="{% static 'gencoui/js/rndr_module/service_lang.js' %}"></script>
+
 	<script type="text/javascript">
 		$(function () {
 		  $('[data-tt="tooltip"]').tooltip()
@@ -11,7 +9,7 @@
 	</script>
 {% endblock %}
 {% block content %}
-<div id="ctrl_env" ng-app="app_env" ng-controller="ctrl_env">
+<div id="ctrl_env" ng-controller="ctrl_env">
 			    
 
 	    		<!-- <div class="container-fluid" style=""> -->
@@ -21,12 +19,13 @@
 						</div>						
 					</div>
 					<div class="row">
-						<div class="col-xs-12 col-sm-5">
-						<div style="padding-left: 5%; padding-right:15px;  min-height:375px; overflow: auto;border-right: 1px solid #e3e3e3;">
+						<div class="col-xs-12 col-sm-6">
+						<div style="border: 1px solid #e3e3e3; border-radius: 4px; padding: 10px; margin-top: 20px; margin-left: 20px; background-color: rgba(236, 240, 241, 0.39);">
 							
 						<!-- 	<div id="jstreeEnvs">
 				    		</div> -->
 				    		<div style="margin-bottom: 15px; padding-top:10px;">
+				    			Environment
 							    <a class="btn icon-btn btn-default" role="button"  data-placement="bottom" data-tt="tooltip" title="Create Environment" ng-click="new()">
 										<span class="glyphicon btn-glyphicon glyphicon-plus img-circle" ></span>					
 								</a>	
@@ -47,13 +46,13 @@
 							    <tr ng-repeat="env in envs">
 							      <td ng-click="load_env(env.id_entorno)">
 							      	
-							      	<img  ng-src="{{env.icon.upload}}" onerror="this.onerror=null; this.src='/static/gencoui/img/rndr/noimage.jpg'" width="24px" height="24px"/>
-						      		
-								    <p ng-if="$odd" style="color:#6791bb;display:inline">{{env.nombre}}</p>
-								   	<p ng-if="$even" style="color:#8c8c8c;display:inline">{{env.nombre}}</p>
+							      	<img  ng-src="{{env.icon.upload}}" onerror="this.onerror=null; this.src='/static/gencoui/img/rndr/noimage.jpg'" width="24px" height="24px" style="display:inline;">
+							      	</img>						      		
+								   	
 							      </td>
-							      <td width="40px">
-							      	
+							      <td  ng-click="load_env(env.id_entorno)">
+							      	<div style="color:#8c8c8c; font-size:10px; width: 100%; white-space: nowrap; 	overflow: hidden; text-overflow: ellipsis;">{{env.nombre}}
+ 										</div>
 							      </td>
 							    </tr>
 							    {% endverbatim %}
@@ -74,8 +73,8 @@
 							
 						</div>	
 						</div>
-						<div class="col-xs-12 col-sm-7" style="">
-							<div style="min-height:375px;padding-top: 15px; padding-right: 15px; overflow:auto;">
+						<div class="col-xs-12 col-sm-6" style="">
+							<div style="min-height:300px;padding-top: 15px; padding-right: 15px; overflow:auto;">
 
 								<div class="panel panel-default" style="border:none; background-color:transparent" ng-if="GencoEntorno.id_entorno!=null">
 						
@@ -86,7 +85,7 @@
 										{% endverbatim %}
 										<div class="rndr_title" style="display:inline">
 											<!-- <image src="{% static 'gencoui/img/gwt.jpg' %}" width="32px" height="32px"></image> -->
-											<p style="font-size:14px; display:inline;" ng-bind="nombre"></p>
+											<p style="font-size:12px; display:inline;" ng-bind="nombre"></p>
 										</div>
 										
 										<div class="dropdown" style="display:inline; float: right">
@@ -192,25 +191,7 @@
 										</div>
 
 
-										<div style="padding: 10px;" >
-			
-											<p style="display:inline;">Projects</p>
-								  			
-								        	<a class="btn icon-btn btn-default" ng-click="create_project()" data-placement="bottom"data-tt="tooltip" title="Save">
-						<span class="glyphicon btn-glyphicon glyphicon-plus img-circle" ></span>					
-											</a>
-
-											<div style="border: 1px solid #e3e3e3;border-radius: 4px;padding: 10px; margin-top: 20px;  background-color:rgba(236, 240, 241, 0.39);">
-												{% verbatim %}
-											  	<div ng-repeat="prj in envProjects" style="display:inline;">
-											  		<a class="btn btn-default btn-sm" href="module/builds/{{prj.id_entorno}}/{{prj.id_proyecto}}">
-											    	{{prj.nombre}}
-											    	</a>
-											  	</div>
-											  	{% endverbatim %}
-									 		</div>
-
-										</div>						
+					
 									</div>	
 
 								</div>			
