--- a/templates/gencoui/rndr_editor.html
+++ b/templates/gencoui/rndr_editor.html
@@ -189,7 +189,9 @@
 					    <div class="well well-sm">
 					    						    	
 							<img src="{% get_media_prefix %}{{icon}}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/desing.png' %}'" width="32px" height="32px">
-							{{entorno.nombre}}</img>
+							</img>
+							<p style="font-size:12px; display:inline;">{{entorno.nombre}}</p>
+							
 							
 
 					    </div>
