--- a/templates/gencoui/rndr_builds_search.html
+++ b/templates/gencoui/rndr_builds_search.html
@@ -11,16 +11,19 @@
 <div id="ctrl_env" ng-controller="ctrl_env">
 	  	  		  	
 
-    <div class="panel-body">
+    <div >
    
+		
 
+		<div style="text-align:left; margin-left:15px">
+			Projects				
+			<a class="btn icon-btn btn-default" ng-click="create_project()" data-placement="bottom"data-tt="tooltip" title="Save">
+				<span class="glyphicon btn-glyphicon glyphicon-plus img-circle" ></span>					
+			</a>
+		</div>
 		<div style="padding: 10px;" >
 
-			<p style="display:inline;">Projects</p>
-				
-			<a class="btn icon-btn btn-default" ng-click="create_project()" data-placement="bottom"data-tt="tooltip" title="Save">
-		<span class="glyphicon btn-glyphicon glyphicon-plus img-circle" ></span>					
-			</a>
+			
 
 			<div style="border: 1px solid #e3e3e3;border-radius: 4px;padding: 10px; margin-top: 20px;  background-color:rgba(236, 240, 241, 0.39);">
 				{% verbatim %}
