--- a/static/gencoui/css/rndr-style.css
+++ b/static/gencoui/css/rndr-style.css
@@ -164,7 +164,10 @@
 
 		.navbar {
 			margin-bottom: 0px;
-			box-shadow: 0px 5px 10px #848080;;
+			box-shadow: 0px 5px 10px #b5b3b3;
+			//background-image: linear-gradient(180deg,#0c5176,transparent),linear-gradient(-121deg,transparent 94%,hsla(0,0%,56%,.27) 0),linear-gradient(-107deg,transparent 92%,hsla(0,6%,55%,.18) 0),linear-gradient(-99deg,transparent 90%,hsla(0,0%,100%,.08) 0),linear-gradient(0deg,#094667,#254356);
+			//background-image:linear-gradient(-125deg, rgba(245, 33, 33, 0) 95%, rgba(255, 255, 255, 0.08) 15%), linear-gradient(-115deg, rgba(27, 0, 255, 0) 91%, rgba(255, 255, 255, 0.08) 15%), linear-gradient(-105deg, rgba(255, 33, 33, 0) 88%, rgba(255, 255, 255, 0.08) 15%), radial-gradient(circle, #F77400 0%, #DF4700 100%);
+
 		}
 
 		.navbar-brand {
@@ -322,6 +325,7 @@
 		    margin: 0;
 		    /*font-family: 'Roboto', sans-serif;*/
 		    font-family: 'Gotham Rounded';
+		    color: #445d6e;
 		}
 
 
