--- a/templates/gencoui/menu.html
+++ b/templates/gencoui/menu.html
@@ -11,11 +11,7 @@
     body {
         background-color: #eee;
     }
-
-    .navbar {
-      margin-bottom: 0px;
-      box-shadow: 0px 5px 10px #3a3838;
-    }    
+ 
 
   </style>
 {% endblock %}
@@ -89,18 +85,18 @@
               <div class="col-xs-12">
                   <div class="panel panel-default" style="border-width:0px; box-shadow:0px 10px 19px 0px #b4bcc2; ">
 
-                    <div class="panel-body" style=" text-align:center; border-bottom:1px solid #e3e3e3; border-top-right-radius: 5px; border-top-left-radius: 5px; padding:5px">
+                    <div class="panel-header" style=" text-align:center; border-bottom:1px solid #e3e3e3; border-top-right-radius: 5px; border-top-left-radius: 5px; padding:5px">
                     
                       
                       <h3 style="color: #202077; margin-top: 10px;display:inline">Projects</h3>
-                      <img src="{% static 'gencoui/img/rndr/environment.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="48px" height="48px" style="display:inline; margin:10px"></img>
+                      <img src="{% static 'gencoui/img/rndr/build.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="48px" height="48px" style="display:inline; margin:10px"></img>
 
                       <p style="font-size:12px; color:#202077; margin-bottom: 5px;"></p>
 
                     </div>
 
 
-                    <div class="panel-body" style=" text-align:center; border-bottom:1px solid #e3e3e3; border-top-right-radius: 5px; border-top-left-radius: 5px; padding:5px">
+                    <div class="panel-body" style="border-bottom:1px solid #e3e3e3; border-top-right-radius: 5px; border-top-left-radius: 5px; padding:5px">
                       {% include "gencoui/rndr_builds_search.html" %}
                     </div>  
                   </div>    
